Add Buildhub checks.
