# pollbot/api.yaml
@@ -350,6 +350,23 @@ paths:
       tags:
       - Status
 
+  /{product}/{version}/buildhub:
+    get:
+      summary: "check buildhub has referenced the new version"
+      operationId: "checkBuildhub"
+      produces:
+      - "application/json"
+      parameters:
+      - $ref: "#/parameters/product"
+      - $ref: "#/parameters/version"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/existanceStatus"
+      tags:
+      - Status
+
 definitions:
   existanceStatus:
     type: "object"
